<resources>
    <string name="app_name">Raumplaner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="main_menu">Hauptmenü</string>
    <string name="room_search">Raumsuche</string>
    <string name="place_search">Arbeitplatzsuche</string>
    <string name="fast_search">Schnellsuche</string>
    <string name="favourites">Favoriten</string>
    <string name="preferences">Suchoptionen ändern</string>
    <string name="title_activity_options">Optionen</string>
    <string name="ok">Auswahl bestätigen</string>
    <string name="continue_to_map">Fortfahren zur Karte</string>


    <string name="address">Adresse/Raumname</string>
    <string name="resources">Ressourcen</string>
    <string name="institution">Fach/Fakultät</string>


    <string name="power">Strom</string>
    <string name="computer">Rechnerzugang</string>
    <string name="board">Tafel/Whiteboard</string>
    <string name="wifi">Wifi</string>
    <string name="locker">Spind</string>
    <string name="first_aid">Erste Hilfe</string>
    <string name="toilet">WC</string>
    <string name="seat">Sitzplatz</string>

    <string name="searched">Sie haben gesucht nach: </string>
    <string name="suggestions">Wir haben folgende Räume für Sie gefunden:</string>


    <string-array name="institutions">
        <item>Technische Fakultät</item>
        <item>Philosophische Fakultät</item>
        <item>Theologische Fakultät</item>
        <item>Mathematisch-Naturwissenschaftliche Fakultät</item>
        <item>Witschafts- und Sozialwissenschaftliche Fakultät</item>
        <item>Rechtswissenschaftliche Fakultät</item>
        <item>Medizinische Fakultät</item>
        <item>Agrar- und Ernährungswissenschaftliche Fakultät</item>
    </string-array>

    <string-array name="rooms">
        <item>CAP4, R.709</item>
        <item>CAP3, 1.OG</item>
        <item>HRS3, Grundausbildungspool</item>
        <item>OS75, R.506 (Seminar 1)</item>
        <item>OS75, R.514 (Belegt)</item>
    </string-array>

    <string name="title_activity_room_search">RoomSearch</string>
    <string name="title_activity_place_search">PlaceSearch</string>
    <string name="title_activity_map">map</string>
    <string name="title_activity_room_description">RoomDescription</string>
    <string name="title_activity_fast_search">FastSearch</string>




</resources>
