<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/mainview">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:rowCount="3"
            android:columnCount="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_placeSearch"
                android:text="@string/place_search"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="2"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences"
                android:gravity="center"
                android:layout_row="0"
                android:id="@+id/btn_options"
                android:layout_column="1"
                android:layout_columnWeight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_search"
                android:textAlignment="center"
                android:id="@+id/btn_roomSearch"
                android:layout_columnWeight="2"
                android:layout_column="0"
                android:layout_row="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/txt_roomSearch"
                android:text="@string/address"
                android:layout_columnWeight="2"
                android:layout_column="1"
                android:layout_row="1"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_search"
                android:textAlignment="center"
                android:id="@+id/btn_fastSearch"
                android:layout_columnWeight="2"
                android:layout_column="0"
                android:layout_row="2"/>


        </GridLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourites"/>


        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/institutions">
        </ListView>

</LinearLayout>
